--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "jukuan/shop-manapi-by",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -9,7 +10,9 @@
     ],
     "keywords": [
         "Belarus",
-        "Беларусь"
+        "Беларусь",
+        "shopmanager.by",
+        "Yandex Market Language"
     ],
     "minimum-stability": "stable",
     "prefer-stable": true,
