--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     },
     "require": {
-        "php": "^8.1",
+        "php": "^7.4|^8.1",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
@@ -37,8 +37,8 @@
         "psr/log": "^3.0"
     },
     "require-dev": {
-        "vimeo/psalm": "^4.12",
-        "phpunit/phpunit": "^9.5",
+        "vimeo/psalm": "^4.30",
+        "phpunit/phpunit": "^9.6",
         "symfony/var-dumper": "^6.2"
     }
 }
