--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jukuan/shop-manapi-by",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -33,8 +33,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "lireincore/ymlparser": "^3.2",
-        "psr/log": "^3.0"
+        "lireincore/ymlparser": "^3.2"
     },
     "require-dev": {
         "vimeo/psalm": "^4.30",
